--- a/.github/workflows/initial-pipeline.yml
+++ b/.github/workflows/initial-pipeline.yml
@@ -9,12 +9,14 @@ on:
 jobs:
   integration:
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - uses: actions/checkout@v3
       - run: echo "- Lint the code and run unit tests"
         
   build:
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - uses: actions/checkout@v3
       - run: echo "- Build the artifact"
@@ -22,41 +24,52 @@ jobs:
   test-artifact:
     needs: build
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - uses: actions/checkout@v3
       - run: echo "- Simulate and test the artifact"
 
   development:
+    needs: build
     runs-on: ubuntu-latest
+    environment: development
     steps:
       - run: echo "- Auto-deploy the artifact to the development environment"
         
   staging:
+    needs: development 
+    needs: test-artifact
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - run: |
-          echo "After development envirionment is deployed..."
+          echo "After development environment is deployed..."
           echo "and after the artifact tests have passed..."
           echo "- Auto-deploy the artifact to the staging environment"
         
   test-staging:
     needs: staging
     runs-on: ubuntu-latest
+    environment: staging
     steps:
       - run: echo "- Test the staging environment"
         
   production:
     needs: staging
+    needs: test-staging
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - run: |
-          echo "After staging envirionment is deployed..."
+          echo "After staging environment is deployed..."
           echo "and after the staging tests have passed..."
-          echo "require a review before deploying to the production envirionment, then..."
+          echo "require a review before deploying to the production environment, then..."
           echo "- Deploy the artifact to the production environment"
 
   test-production:
+    needs: production
     runs-on: ubuntu-latest
+    environment: production
     steps:
       - run: echo "- Test the artifact in the production environment"
       - run: echo "# All tests and deployments have completed successfully!"
